--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
-    
     "jose": "^4.11.4",
     "jsonwebtoken": "^9.0.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.4",
