--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "joi": "^17.7.0",
     "jose": "^4.11.4",
     "jsonwebtoken": "^9.0.0",
-    "kafkajs": "^2.2.4",
     "jwk-to-pem": "^2.0.5",
+    "kafka-node": "^5.0.0",
+    "kafkajs": "^2.2.4",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "redis": "^4.6.4",
