--- a/package.json
+++ b/package.json
@@ -24,10 +24,7 @@
     "jsonwebtoken": "^9.0.0",
     "kafkajs": "^2.2.4",
     "jwk-to-pem": "^2.0.5",
-    "pg": "^8.9.0",
-    "pg-hstore": "^2.3.4",
-    "redis": "^4.6.4",
-    "sequelize": "^6.28.0"
+    "memory-cache": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
@@ -35,7 +32,6 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.5.0",
-    "sequelize-cli": "^6.6.0"
+    "jest": "^29.5.0"
   }
 }
