--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jwk-to-pem": "^2.0.5",
     "kafkajs": "^2.2.4",
     "memory-cache": "^0.2.0",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
